# bldr_test

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: github-actions-demo.yml
dev_docs/: bldr_test.html  search.js
dev_docs/bldr_test/: main.html
dev_docs/tests/: test_main.html
docs/: bldr_test.html  index.html  search.js  tests.html
docs/bldr_test/: main.html
docs/tests/: test__main__.html  test_main.html
src/bldr/: __main__.py  main.py
src/bldr_test/: __init__.py  __main__.py  main.py
tests/: test__main__.py  test_main.py
