[tool.poetry]
name = "bldr_test"
version = "0.4.2"
description = ""
authors = ["Ethan Skowronski-Lutz <33399972+ethanmsl@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bldr_test", from = "src"}]

[tool.poetry.scripts]
bldrtst = "bldr_test.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
pyright = "^1.1.281"
black = "^22.10.0"
pytest = "^7.2.0"
pdoc = "^12.3.0"
isort = "^5.10.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
# compatibility with Black formatter
profile = "black"


[tool.pylint]
disable = [
    # Black cleans trailing whitespace outside of docstrings,
    # inside of docstrings it is used for Markdown formatting
    "C0303",  # trailing-whitespace
]

[tool.pylint.format]
# line length to match Black formatter
max-line-length = "88"


[tool.pyright]
include = ["src"]
exclude = [".venv",
    "src/experimental",
    "src/typestubs",
  "**/__pycache__"
]
# utilizing the fact that we've set Poetry `virtualenv.in-project` to true
venvPath = "."
venv = ".venv"

typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = true

executionEnvironments = [
  { root = "src" }
]


[tool.pytest.ini_options]
# adds the following paths to pythonpath, specified relative to root dir
pythonpath = [
    "src",
]
